# jarvis-ali

./: .env.example  .gitignore  pyproject.toml
src/jarvis/: config.py  conversation.py  main.py  personality.py
src/jarvis/tools/: __init__.py  map_tools.py  math_tools.py  registry.py  system_tools.py  time_tools.py  web_tools.py
